--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,10 +22,13 @@
 html, body {
   margin: 0;
   padding: 0; 
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100%;
   font-family: 'DM Sans', sans-serif;
   background-color: var(--darkGrey);
   color: var(--white); 
   /* text-align: center; */
+}
+
+#root {
+  height: 100%;
 }
